--- a/_config.yml
+++ b/_config.yml
@@ -3,9 +3,9 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: 伊利亚
-subtitle: 写字的地方
-description: 当然是有选择地记录伊利亚。
+title: imbalance/Elia
+subtitle: 
+description: 
 author: Elia
 language: zh-Hans
 timezone:
@@ -14,7 +14,7 @@ timezone:
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
 url: https://elia-is-me.github.io
 root: /
-permalink: :year/:month/:day/:title/
+permalink: :year/:month-:day-:title/
 permalink_defaults:
 
 # Directory
